# DNSReport

./: .gitignore  Dockerfile  README.md  pyproject.toml
dnsreport/: __main__.py  config.py  mailer.py  notify.py  opendns.py
run/: run.sh
src/: config.py  mailer.py  main.py  notify.py  opendns.py
test/: opendns_test.py
