[tool.poetry]
name = "DNSReport"
version = "0.1.0"
description = "Utility to report OpenDNS blocked domains."
authors = ["Eric Smith <eric@esmithy.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
black = "^23.3.0"
pytest = "^5.2"
responses = "^0.10.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
